--- a/TODO
+++ b/TODO
@@ -7,7 +7,8 @@ urgent:
 essential features:
 - Show presenter on other screen
 - Presenter configuration via menu (done)
+- command line file option
 
 bonus features:
-- Caching pages for more performance
+- Caching pages for more performance (done)
 
